--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,4 @@
+/*RESET*/
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -5,7 +6,12 @@ body {
   padding: 0;
   background-color: #151515;
 }
+a {
+  text-decoration: none;
+  color: #fff;
+}
 
+/*HEADER*/
 header {
   background-color: #2d2d2d;
   padding: 1rem;
@@ -16,7 +22,27 @@ header {
 
 .name {
   position: relative;
-  right: 200px;
+  right: 110px;
+  display: flex;
+  align-items: center;
+}
+
+.favorites {
+  width: 150px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #444;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  right: 80px;
+}
+
+.favorites a {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #fff;
 }
 
 .name h1 {
@@ -31,7 +57,6 @@ header {
   border-radius: 15px;
   border: 1px solid #444;
   background-color: #333;
-  color: #151515;
 }
 
 #searchInput:focus {
@@ -59,6 +84,8 @@ header {
 
 #filterPlatform:hover {
   background-color: #fff;
+  color: #151515;
+
   transition: background-color 0.8s ease;
 }
 
@@ -73,6 +100,8 @@ header {
 
 #filterGenre:hover {
   background-color: #fff;
+  color: #151515;
+
   transition: background-color 0.8s ease;
 }
 
@@ -87,6 +116,8 @@ header {
 
 #sortByName:hover {
   background-color: #fff;
+  color: #151515;
+
   transition: background-color 0.8s ease;
 }
 
@@ -100,5 +131,83 @@ header {
 
 #sortByRating:hover {
   background-color: #fff;
+  color: #151515;
+
   transition: background-color 0.8s ease;
+}
+
+/*CARDS*/
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(500px, auto));
+  gap: 5rem;
+  padding: 1rem;
+}
+
+/* Card */
+.card {
+  background: #202020;
+  color: #fff;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s ease;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+}
+
+.card:hover {
+  transform: scale(1.02);
+}
+
+.card img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 0.5rem;
+}
+
+.card-content h3 {
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.card-content p {
+  font-size: 0.9rem;
+  margin: 0.2rem 0;
+}
+
+.card-content button {
+  margin-top: 0.5rem;
+  margin-right: 0.2rem;
+  padding: 0.3rem 0.5rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/*DETAILS BUTTON*/
+.details-btn {
+  border: 1px solid #444;
+  background-color: #333;
+  color: #757575;
+  font-weight: 600;
+}
+.details-btn:hover {
+  background-color: #fff;
+  color: #151515;
+  transition: background-color 0.8s ease;
+}
+
+.fav-btn {
+  background-color: #333;
+  color: #fff;
+}
+
+.fav-btn:hover {
+  background-color: #fff;
 }
