--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -211,3 +211,46 @@ header {
 .fav-btn:hover {
   background-color: #fff;
 }
+
+/*MODAL*/
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  backdrop-filter: blur(10px);
+}
+
+.modal.hidden {
+  display: none;
+}
+
+.modal-content {
+  background: #151515;
+  width: 60%;
+  max-height: 80%;
+  overflow-y: auto;
+  padding: 1rem;
+  position: relative;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.modal-content .close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.modal-content img {
+  margin: 0.5rem 0;
+  border-radius: 8px;
+}
