--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,6 +46,7 @@ header {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  margin-right: 5px;
 }
 
 .home {
@@ -281,23 +282,28 @@ header {
 }
 
 .modal-content img {
-  margin: 0.5rem 0;
+  margin: 0 auto;
   border-radius: 8px;
 }
 
 .modal-title {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .close {
-  position: fixed;
-  top: 10px;
-  right: 10px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
   z-index: 10;
-  font-size: 2rem;
+  font-size: 1.5rem;
   cursor: pointer;
+  background-color: #151515;
+  border-radius: 10px;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.4rem;
+  border: 1px solid #444;
 }
 /*FAVORITOS*/
 .remove-fav-btn {
@@ -324,9 +330,6 @@ header {
   text-align: center;
 }
 
-.media-filter-text {
-  display: none;
-}
 @media (max-width: 1400px) {
   .title-text {
     display: none;
@@ -353,7 +356,7 @@ header {
 
 @media (max-width: 750px) {
   #searchInput {
-    width: 300px;
+    width: 80%;
   }
   #filterPlatform {
     width: 100px;
@@ -367,6 +370,10 @@ header {
   .home {
     margin-bottom: 10px;
   }
+  #favoritesContainer p {
+    width: 80%;
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 530px) {
@@ -379,10 +386,10 @@ header {
     height: 200px;
   }
   .modal-content {
-    width: 60%;
+    width: 80%;
   }
   .modal-content img {
-    width: 90%;
+    width: 80%;
   }
   .header-nav {
     flex-direction: row;
